scripts/nullaway/wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8.txt
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:113: error: [NullAway] dereferenced expression dir is @Nullable
                grid.set(dir.backwards_x(wayin_x), dir.backwards_y(wayin_y), CoreMaterial.FIXEDFLOORDOWN);
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:293: error: [NullAway] dereferenced expression from.getType() is @Nullable
        return (from.getType().equals(RoomType.SPECIAL)) ? from.room_map.getAccess(dir, from.special_dir) : RandomUtil.nextInt(size) + 1;
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:13: error: [NullAway] @NonNull field levelStart not initialized
    private Vector2D levelStart, levelEnd;
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:13: error: [NullAway] @NonNull field levelEnd not initialized
    private Vector2D levelStart, levelEnd;
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:15: error: [NullAway] @NonNull field startDir not initialized
    private Direction startDir, endDir;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:15: error: [NullAway] @NonNull field endDir not initialized
    private Direction startDir, endDir;
                                ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:72: error: [NullAway] assigning @Nullable expression to @NonNull field
                endDir = n.getRoomDir();
                       ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:109: error: [NullAway] dereferenced expression x.getType() is @Nullable
                    if (x.getGen() >= max && x.getType().equals(RoomType.ROOM)) {
                                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/datatypes/Grid.java:160: error: [NullAway] dereferenced expression map is @Nullable
        if (origin_x + map.sx(dir) - 1 >= size.getX() || origin_x < 0 || origin_y + map.sy(dir) - 1 >= size.getY() || origin_y < 0)
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/RoomPopulator.java:36: error: [NullAway] dereferenced expression room.getType() is @Nullable
        if (!(room.getType().equals(RoomType.SPECIAL)) && RandomUtil.chance(SettingsManager.getInt(CoreSettings.PoolPct)))
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/StandardMethods.java:16: error: [NullAway] dereferenced expression dir is @Nullable
        fixWall(dir.left_x(wayin_x), dir.left_y(wayin_y), g);
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/StandardMethods.java:37: error: [NullAway] dereferenced expression dir is @Nullable
        grid.set(dir.forwards_x(x), dir.forwards_y(y), CoreMaterial.FIXEDFLOORUP);
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreDownSchematic.java:40: error: [NullAway] dereferenced expression dir is @Nullable
        if (dir.isHorizontal())
               ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreDownSchematic.java:47: error: [NullAway] dereferenced expression dir is @Nullable
        if (dir.isHorizontal())
               ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreDownSchematic.java:56: error: [NullAway] switch expression dir is @Nullable
        switch(dir) {
               ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreDownSchematic.java:101: error: [NullAway] switch expression dir is @Nullable
        switch(dir) {
               ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreDownSchematic.java:117: error: [NullAway] dereferenced expression tmp is @Nullable
        if (!tmp.isEmpty()) {
                ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreDownSchematic.java:121: error: [NullAway] switch expression dir is @Nullable
            switch(dir) {
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/Main2.java:42: error: [NullAway] dereferenced expression l is @Nullable
        l.show();
         ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreSchematic.java:40: error: [NullAway] dereferenced expression dir is @Nullable
        if (dir.isHorizontal())
               ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreSchematic.java:47: error: [NullAway] dereferenced expression dir is @Nullable
        if (dir.isHorizontal())
               ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreSchematic.java:56: error: [NullAway] switch expression dir is @Nullable
        switch(dir) {
               ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreSchematic.java:100: error: [NullAway] switch expression dir is @Nullable
        switch(dir) {
               ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreSchematic.java:116: error: [NullAway] dereferenced expression tmp is @Nullable
        if (!tmp.isEmpty()) {
                ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreSchematic.java:120: error: [NullAway] switch expression dir is @Nullable
            switch(dir) {
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/datatypes/Level.java:47: error: [NullAway] dereferenced expression grid is @Nullable
        grid.show();
            ^
    (see http://t.uber.com/nullaway )
26 errors
